syntax = "proto3";
package wire;

message OpeningTx {
  string channel_id = 1;
  repeated bytes pubkeys = 2;
  bytes state = 3;
  uint64 hold_period = 4;
}

message UpdateTx {
  string channel_id = 1;
  uint32 sequence_number = 2;
  bool fast = 3;
  bytes state = 4;
}

message FollowOnTx {
  string channel_id = 1;
  bytes state = 2;
}

message ClosingTx {
  string channel_id = 2;
}

message Envelope {
  bytes payload = 1;
  repeated bytes signatures = 2;
}

message Parcel {
  repeated Envelope envelopes = 1;
}